# app/Http/Resources/CustomerResource.php
@@ -15,5 +15,11 @@ class CustomerResource extends JsonResource
     public function toArray(Request $request): array
     {
         return parent::toArray($request);
+//        return [
+//            'id' => $this->id,
+//            'metadata' => $this->metadata,
+//            'created_at' => $this->created_at?->toDateTimeString(),
+//            'updated_at' => $this->updated_at?->toDateTimeString(),
+//        ];
     }
 }
