# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\CurrencyController;
 use App\Http\Controllers\ClientController;
 use App\Http\Controllers\CustomersController;
+use App\Http\Controllers\GatewayController;
 use App\Http\Controllers\OtpController;
 use App\Http\Middleware\EnsureClientToken;
 use Illuminate\Http\Request;
@@ -14,9 +15,14 @@ Route::middleware('client.token')->name("client.")->group(function () {
         Route::post("verify", [OtpController::class, 'verify'])->name("verify");
     });
     Route::apiResource("currencies", CurrencyController::class);
-    Route::get("users/find", [CustomersController::class, 'findCustomer'])->name("users.find");
-    Route::apiResource("users", CustomersController::class);
+
+    Route::apiResource("users", CustomersController::class)->parameters([ 'users' => 'customer']);
+    Route::get('users/{user}/transactions', [CustomersController::class, 'transactions'])->name("customers.transactions");
+    Route::get('users/{user}/wallets', [CustomersController::class, 'wallets'])->name("customers.wallets");
+
     Route::apiResource("clients", ClientController::class);
+
+    Route::get('gateways', [GatewayController::class, 'index']);
 
     Route::prefix('transactions')->name('transactions.')->group(function () {
         Route::post('pay', [\App\Http\Controllers\TransactionController::class, 'pay'])->name('pay');
@@ -27,6 +33,6 @@ Route::middleware('client.token')->name("client.")->group(function () {
     });
 });
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+//Route::get('/user', function (Request $request) {
+//    return $request->user();
+//})->middleware('auth:sanctum');
